# kilonova

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  LICENSE  README.md  VISION.md  data.py  preprocess.py  preprocessing.py  pyproject.toml  train.py
kilonova/: __init__.py  cli.py  data.py  preprocessing.py  train.py
kilonova/commands/: __init__.py  clean.py  download.py  evaluate.py  generate.py  info.py  list_cmd.py  preprocess.py  train.py
kilonova/train/: __init__.py  config.py  runner.py
kilonova/utils/: __init__.py  platform.py
loaders/: __init__.py
loaders/cleaning/: __init__.py  base.py  generic.py  registry.py
loaders/dataloader/: __init__.py  dataset.py  factory.py  streaming.py
loaders/downloading/: __init__.py  huggingface.py
loaders/preprocessing/: __init__.py  tokenize.py
models/: __init__.py  architectures.py  gpt2.py  gpt2_from_scratch.py
osmium/: __init__.py  cli.py
osmium/commands/: clean.py  evaluate.py  generate.py  train.py
osmium/train/: __init__.py  config.py  runner.py
osmium/utils/: __init__.py  config.py  paths.py  platform.py
scripts/: clean_verdict_dataset.py  evaluate_model.py  gutenberg.py  lightning_setup.sh  sync_to_lightning.sh
tests/: __init__.py  test_architectures.py  test_cli.py  test_config.py  test_data_pipeline.py  test_generate.py  test_loader.py  test_paths.py  test_registry.py  test_train.py
