[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osmium"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.1.7",
    "datasets>=4.2.0",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
osmium = "osmium.cli:main"

[tool.setuptools.packages.find]
include = ["osmium*", "models*", "loaders*"]
exclude = ["data*", "scripts*", "docs*"]
