[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "kilonova"
version = "0.1.0"
description = "Train LLMs from scratch."
readme = "README.md"
requires-python = ">=3.13"
license = { file = "LICENSE" }
authors = [{ name = "williamangelo" }]
dependencies = [
    "datasets>=4.2.0",
    "tiktoken>=0.11.0",
    "torch>=2.8.0",
    "tqdm>=4.67.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
]

[project.urls]
Repository = "https://github.com/williamangelo/kilonova"

[tool.setuptools]
py-modules = ["train", "data", "preprocessing"]
packages = ["models"]
